--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -31,7 +31,7 @@
 <body>
     <h2 style="text-align: center">Completá tus datos para registrarte</h2>
     <div class="form-container">
-        <form action="/users/register" method="POST">
+        <form action="/users/register" method="POST" enctype="multipart/form-data">
             <div class="element-form">
                 <label>Nombre completo:</label>
                 <input type="text" name="nombreUsuario">
@@ -48,10 +48,10 @@
                 <label>Contraseña:</label>
                 <input type="password" name="passwordUsuario">
             </div>
-            <!-- <div class="element-form">
+            <div class="element-form">
                 <label>Imagen de perfil:</label>
                 <input type="file" name="avatar" accept=".jpg">
-            </div> -->
+            </div>
             <button type="submit" class="element-form">Registrarme</button>
             <button type="reset" class="element-form">Borrar</button>               
         </form>
