--- a/public/css/login.css
+++ b/public/css/login.css
@@ -19,3 +19,10 @@
     padding-bottom: 15px;
     padding-top: 15px;
 }
+
+.feedback{
+    padding-left: 10px;
+    font-size: 15px;
+    color: #FFE74C;
+    font-weight: bold;
+}
