--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -12,24 +12,48 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 rel="stylesheet" />
-    <title>Microdancing Bebidas</title>
+    <title>Login</title>
 </head>
     
 <header>
-    <nav>
-        <ul class="main-navbar">
-          <li>
-            <a href="/">Home</a>
-          </li>
-          <li>
-            <a href="/users/login">Iniciar sesión <i class="fas fa-sign-in-alt"></i></a>
-          </li>
-          <li>
-            <a href="/users/register">Crea tu cuenta <i class="fas fa-user-plus"></i></a>
-          </li>
-        </ul>
-      </nav>
-</header>  
+    <nav class="main-navbar">
+      <div>
+          <ul class="left-navbar">
+              <li>
+                  <a href="/" class="logo">miAplicacion</a>
+              </li>
+              <li>
+                  <a href="/">Home</a>
+              </li>
+              <li>
+                  <a href="#">Nostros</i></a>
+              </li>
+              <li>
+                  <a href="#">Contacto</i></a>
+              </li>
+          </ul>     
+      </div>
+      <div>
+          <ul class="right-navbar">
+          <% if (locals.isLogged) { %>
+            <li>
+              <a href="/users/profile">miPerfil</a>
+            </li>
+            <li>
+              <a href="/">Logout</a>
+            </li>
+          <%} else{ %>
+              <li>
+                  <a href="/users/Login">Iniciar Sesion</i></a>
+              </li>
+              <li>
+                  <a href="/users/register">Registarse</i></a>
+              </li>
+          </ul>
+          <%} %>
+      </div>
+  </nav>
+</header>
  
 <body>
         <h2 style="text-align: center">Ingresá a tu cuenta</h2>
