Creacion de la ruta y la vista para gestionar los usuarios (crud) para usuarios admin

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,46 +1,4 @@
-*{
-  padding: 0;
-  margin: 0;
-}
-
-body{
-  font-size: 21px;
-  color: white;
-  background-color: #C2C9CD;
-}
-
-nav{
-  background-color: #547794;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 30px;
-
-}
-
-.left-navbar {
-  display: flex;
-  align-items: center;
-
-}
-
-.right-navbar {
-  display: flex;
-  justify-items: center;
-  flex-grow: 1;
-}
-
-ul li {
-  padding: 15px;
-  list-style: none;
-}
-
-a{
-  text-decoration: none;
-  color: aliceblue;
-}
-
-.logo{
-  font-size: 36px;
-}
-
+.tituloPrincipal{
+    padding: 0 40px;
+  }
+  
