--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <title>Login</title>
     <link rel='stylesheet' href='/css/index.css' />
+    <link rel='stylesheet' href='/css/header.css' />
     <link rel='stylesheet' href='/css/normalize.css' />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   </head>
