--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,36 +1,46 @@
 <header>
     <nav class="main-navbar">
       <div>
-          <ul class="left-navbar">
-              <li>
-                  <a href="/" class="logo">miAplicacion</a>
-              </li>
-              <li>
-                  <a href="/">Home</a>
-              </li>
-              <li>
-                  <a href="#">Nosotros</i></a>
-              </li>
-              <li>
-                  <a href="#">Contacto</i></a>
-              </li>
-          </ul>     
+          <ul class="left-navbar">  
+                <li>
+                    <a href="/" class="logo">miAplicacion</a>
+                </li>
+                <li>
+                    <a href="/">Home</a>
+                </li>
+                <li>
+                    <a href="#">Nosotros</i></a>
+                </li>
+                <li>
+                    <a href="#">Contacto</i></a>
+                </li>
+                <% if (locals.isLogged) { %>  
+                    <li>
+                        <a href="/users/admin">Administrar</i></a>
+                    </li>
+                <%} %>
+        </ul>     
       </div>
       <div>
           <ul class="right-navbar">
           <% if (locals.isLogged) { %>
             <li>
-              <a href="/users/profile"><img src="/img/<%=locals.usuarioLogueado.nombre%>" width = '30' style= 'border-radius: 100%;'alt=""></a>
+                <a href="/users/profile">
+                    <figure class="img-avatar-container">
+                        <img src="/img/<%= locals.usuarioLogueado.avatar %> " alt="">
+                    </figure>
+                    <%= locals.usuarioLogueado.nombre %>
+                </a>
             </li>
             <li>
               <a href="/users//logout">Logout</a>
             </li>
           <%} else{ %>
               <li>
-                  <a href="/users/Login">Iniciar Sesion</i></a>
+                  <a href="/users/Login">Iniciar Sesion </a>
               </li>
               <li>
-                  <a href="/users/register">Registarse</i></a>
+                  <a href="/users/register">Registarse</a>
               </li>
           </ul>
           <%} %>
