--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/css/login.css">
-        <link rel="stylesheet" href="/css/index.css">
+        <link rel="stylesheet" href="/css/header.css">
         <link rel="stylesheet" href="/css/normalize.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,6 +34,13 @@
             <div class="element-form">
                 <label>DNI:</label>
                 <input type="text" name="dniUsuario">
+            </div>
+            <div class="element-form">
+                <label>Categoria de usuario:</label>
+                <select name="categoria">
+                    <option value=0 selected>Estándar</option>
+                    <option value=1>Administrador</option>
+                </select>
             </div>
             <div class="element-form">
                 <label>Correo electrónico:</label>
