--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,13 +1,20 @@
+h2{
+    text-align: center;
+    margin-top: 15px;
+}
+
 .form-container{
     padding: 15px;
-    border: solid 2px #FFE74C;
+    border: solid 1px #007bff;
     max-width: 600px;
     margin: 0 auto;
+    margin-top: 15px;
 }
 
 .element-form{
     padding: 10px;
 }
+
 
 .form-container button{
     border-radius: 8px;
@@ -19,6 +26,21 @@
     padding-bottom: 15px;
     padding-top: 15px;
 }
+
+button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+}
+
+button:hover {
+    background-color: #0056b3;
+} 
 
 .feedback{
     padding-left: 10px;
