--- a/src/views/administrador.ejs
+++ b/src/views/administrador.ejs
@@ -27,11 +27,15 @@
                 <tbody>
                     <% usuarios.forEach(usuario => { %>
                     <tr>
-                        <td><%= usuario.id%> </td>
+                        <td><%= usuario.dni%> </td>
                         <td><%= usuario.nombre%> </td>
-                        <td><a href="#"> <i class="fas fa-eye fa-fw"></i></a></td>
-                        <td><a href="#"> <i class="far fa-edit fa-fw"></i></a></td>
-                        <td><a href="#"><i class="fas fa-trash fa-fw"></i></a></td>
+                        <td><a href="/users/detail/<%= usuario.id%>"> <i class="fas fa-eye fa-fw"></i></a></td>
+                        <td><a href="/users/edit/<%= usuario.id%>"> <i class="far fa-edit fa-fw"></i></a></td>
+                        <td style="text-align: center;">
+                            <form action="/users/delete/<%= usuario.id %>?_method=delete" method="POST" style="display: inline-flex">
+							    <button type="submit" class="action-button delete"><i class="fas fa-trash fa-fw"></i></button>
+						    </form>
+                        </td>
                     </tr>
                     <% }); %>
                 </tbody>
