--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -14,7 +14,8 @@
                 <li>
                     <a href="#">Contacto</i></a>
                 </li>
-                <% if (locals.isLogged) { %>  
+                <% if (locals.isLogged  && usuarioLogueado.cateogoria ==1) { %>  
+                    <% console.log(usuarioLogueado.cateogoria)%>
                     <li>
                         <a href="/users/admin">Administrar</i></a>
                     </li>
@@ -44,6 +45,8 @@
               </li>
           </ul>
           <%} %>
-      </div>
+      
+          
+    </div>
   </nav>
   </header>
