--- a/public/css/register.css
+++ b/public/css/register.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+
 h2{
     text-align: center;
     margin: 25px;
@@ -16,7 +17,6 @@ h2{
     padding: 20px;
 }
 
-
 .registration-form {
     background-color: #f5f5f5;
     padding: 20px;
@@ -24,9 +24,14 @@ h2{
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-.element-form label{
+.element-form {
+    margin-bottom: 15px;
+}
+
+.element-form label {
+    font-size: 16px;
     display: block;
-    padding:  5px 0;
+    margin-bottom: 5px;
 }
 
 .element-form input,
@@ -38,26 +43,6 @@ h2{
     border-radius: 5px;
 }
 
-
-.element-form input{
-    width: 100%;
-    height: 40px;
-}
-
-
-.form-container button{
-    border-radius: 8px;
-    opacity: 0.6;
-}
-
-.hipervinculo-registro{
-    color:#007bff
-}
-
-.registro{
-    padding: 15px 0;
-    font-size: 20px;
-}
 
 .element-form button {
     background-color: #007bff;
