--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,52 +1,40 @@
 <header>
-    <nav class="main-navbar">
-      <div>
-          <ul class="left-navbar">  
-                <li>
-                    <a href="/" class="logo">miAplicacion</a>
-                </li>
-                <li>
-                    <a href="/">Home</a>
-                </li>
-                <li>
-                    <a href="#">Nosotros</i></a>
-                </li>
-                <li>
-                    <a href="#">Contacto</i></a>
-                </li>
-                <% if (locals.isLogged  && usuarioLogueado.cateogoria ==1) { %>  
-                    <% console.log(usuarioLogueado.cateogoria)%>
-                    <li>
-                        <a href="/users/admin">Administrar</i></a>
-                    </li>
-                <%} %>
-        </ul>     
-      </div>
-      <div>
-          <ul class="right-navbar">
-          <% if (locals.isLogged) { %>
+    <nav class="menu">
+        <label ><a href="/" class="logo">miAplicación</a></label>
+        <ul class="navbar">   
             <li>
-                <a href="/users/profile">
-                    <figure class="img-avatar-container">
-                        <img src="/img/<%= locals.usuarioLogueado.avatar %> " alt="">
-                    </figure>
-                    <%= locals.usuarioLogueado.nombre %>
-                </a>
+                <a href="/">Home</a>
             </li>
             <li>
-              <a href="/users//logout">Logout</a>
+                <a href="#">Contacto</i></a>
             </li>
-          <%} else{ %>
-              <li>
-                  <a href="/users/Login">Iniciar Sesion </a>
-              </li>
-              <li>
-                  <a href="/users/register">Registarse</a>
-              </li>
-          </ul>
-          <%} %>
-      
-          
-    </div>
-  </nav>
+            <% if (locals.isLogged  && usuarioLogueado.cateogoria ==1) { %>  
+                <% console.log(usuarioLogueado.cateogoria)%>
+                <li>
+                    <a href="/users/admin">Administrar</i></a>
+                </li>
+            <%} %>
+            <% if (locals.isLogged) { %>
+                <li>
+                    <a href="/users/profile">
+                        <figure class="img-avatar-container">
+                            <img src="/img/<%= locals.usuarioLogueado.avatar %> " alt="">
+                        </figure>
+                        <%= locals.usuarioLogueado.nombre %>
+                    </a>
+                </li>
+                <li>
+                <a href="/users/logout">Logout</a>
+                </li>
+            <%} else{ %>
+                <li>
+                    <a href="/users/Login">Iniciar Sesion </a>
+                </li>
+                <li>
+                    <a href="/users/register">Registarse</a>
+                </li>
+            <%} %>
+        </ul>
+        <span class="hamburguer-button"><i class="fas fa-bars fa-lg"></i></span>
+    </nav>
   </header>
