--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,21 +1,31 @@
+.table-container {
+        overflow-x: auto;
+        max-width: 100%; /* Asegura que el contenedor no sea más ancho que la pantalla */
+        margin: 0 auto; /* Centra el contenedor horizontalmente */
+        width:2500px;
+    }
+
+
 .styled-table { 
     border-collapse: collapse; 
-    margin: 25px 0; 
+    margin: 5px 30px; 
     font-size: 0.8em; 
     min-width: 450px; 
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-
+    width: 100%;
+    max-width: 600px;
 }
 
 .styled-table thead tr { 
-    background-color: #2789b6; 
+    background-color: #FFA500; 
+    opacity: 0.5;
     color: #ffffff; 
-    text-align: middle; 
+    text-align: center; 
 }
 
 .styled-table tbody td { 
     color: #000000; 
-    text-align: middle; 
+    text-align: center; 
 }
 
 .styled-table tbody td a {
@@ -31,7 +41,7 @@
 
 
 .styled-table th, .styled-table td { 
-    padding: 14px 20px; 
+    padding: 12px; 
 }
 
 .styled-table tbody tr { 
@@ -39,9 +49,37 @@
 } 
     
 .styled-table tbody tr:nth-of-type(even) { 
-    background-color: #f3f3f3; 
+    background-color: #f5f5f5; 
 } 
 
 .styled-table tbody tr:last-of-type { 
     border-bottom: 2px solid #009879; 
+}
+
+
+.actions-column {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.actions-icons {
+    display: flex;
+    gap: 10px; /* Espacio entre los íconos */
+}
+
+@media (max-width: 600px) {
+    .styled-table {
+        margin: 0;
+        padding-left: 0;
+    }
+
+    .styled-table th,
+    .styled-table td {
+        padding: 10px;
+    }
+
+    .styled-table tbody td {
+        text-align: left; /* Cambia a "left" para alinear el contenido a la izquierda */
+    }
 }
