--- a/public/css/register.css
+++ b/public/css/register.css
@@ -17,6 +17,13 @@ h2{
     padding: 20px;
 }
 
+.errores-form{
+    color:#bb2929;
+    font-size: 20px;
+    margin-bottom: 15px;
+    padding: 10px 0;
+}
+
 .registration-form {
     background-color: #f5f5f5;
     padding: 20px;
@@ -25,13 +32,13 @@ h2{
 }
 
 .element-form {
-    margin-bottom: 15px;
+    margin-bottom: 5px;
 }
 
 .element-form label {
     font-size: 16px;
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 4px;
 }
 
 .element-form input,
@@ -41,6 +48,7 @@ h2{
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    margin-bottom: 15px;
 }
 
 
@@ -62,6 +70,34 @@ h2{
 .element-form button:hover {
     background-color: #0056b3;
 }
+
+
+.formulario-input-incorrecto{
+    color: #bb2929;
+}
+
+.formulario-input-incorrecto .formulario-input{
+    border: 3px solid #bb2929;
+}
+
+.formulario-input-error{
+    display: none;
+    font-size: 15px;
+    margin-bottom: 15px
+}
+
+.formulario-input-correcto{
+    color: green;
+}
+.formulario-input-correcto .formulario-input{
+    border: 3px solid green;
+}
+
+.formulario-input-error-activo{
+    display: block;
+}
+
+
 
 @media (max-width: 480px) {
     .container {
