--- a/src/views/administrador.ejs
+++ b/src/views/administrador.ejs
@@ -11,9 +11,9 @@
   <%- include ("./partials/header") %> 
   
     <body>
-        <h1 style="padding: 0 40px;">Gestión de usuarios</h1>
+        <h1 style="padding-left :30px;">Gestión de usuarios</h1>
         
-        <article style="padding: 0 40px;">
+        <div class="table-container">
             <table class="styled-table ">
                 <thead class="text-white bg-primary">
                 <tr>  
@@ -40,6 +40,9 @@
                     <% }); %>
                 </tbody>
             </table> 
-        </article>
+        </div>
+    
     </body>
+
+    <script src="/js/script.js"></script> 
 </html>
