--- a/src/views/detail.ejs
+++ b/src/views/detail.ejs
@@ -9,6 +9,9 @@
     <link rel='stylesheet' href='/css/normalize.css' />
     <link rel='stylesheet' href='/css/profile.css' />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
   </head>
   
   <%- include ("./partials/header") %> 
