Modificion estilos vista index

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -18,9 +18,9 @@
   <body>
  
     <% if (locals.usuarioLogueado) { %>
-      <h1 style="padding-left:28px">Bienvenido <%= usuarioLogueado.nombre %> a mi aplicación!</h1>
+      <h1 style="padding:0 28px">Bienvenido <%= usuarioLogueado.nombre %> a mi aplicación!</h1>
     <% } else { %>  
-      <h1 style="padding-left:28px">Bienvenido usuario invitado a mi aplicación!</h1>
+      <h1 style="padding:0 28px ">Bienvenido usuario invitado a mi aplicación!</h1>
     <%}%> 
   </body>
 
