--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -3,6 +3,7 @@
         max-width: 100%; /* Asegura que el contenedor no sea más ancho que la pantalla */
         margin: 0 auto; /* Centra el contenedor horizontalmente */
         width:2500px;
+        padding: 3px;
     }
 
 
