--- a/src/views/administrador.ejs
+++ b/src/views/administrador.ejs
@@ -14,7 +14,7 @@
   <%- include ("./partials/header") %> 
   
     <body>
-        <h1 style="padding-left :30px;">Gestión de usuarios</h1>
+        <h1>Gestión de usuarios</h1>
         
         <div class="table-container">
             <table class="styled-table ">
