--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -76,7 +76,7 @@
                 </div>
                 <div class="element-form">
                     <button type="submit">Registrarme</button>
-                    <button type="reset">Borrar</button>
+                    <button type="reset" id="btn-borrar">Borrar</button>
                 </div>
             </form>
         </div>
