--- a/public/css/login.css
+++ b/public/css/login.css
@@ -4,10 +4,18 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #181818;
+}
+
 h2{
     text-align: center;
     margin: 25px;
     font-size: 32px;
+    color: #4CAF50
 }
 
 .container {
