--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,10 +1,19 @@
+body {
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #181818;
+  color: #eee;
+}
+
 .conteiner-profile {
     max-width: 400px;
     margin: 30px ;
     padding: 20px;
     border: 1px solid #ccc;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
+    box-shadow: 0 2px 4px rgba(167, 51, 51, 0.7);
     text-align: center;
+    background-color: #ccc;
   }
 
   .name-profile {
