--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -28,7 +28,7 @@
                     <a href="/users/Login">Iniciar Sesion </a>
                 </li>
                 <li>
-                    <a href="/users/register">Registarse</a>
+                    <a href="/users/register">Registrarse</a>
                 </li>
             <%} %>
         </ul>
