--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -17,7 +17,7 @@
     <%- include ("./partials/header") %> 
 
     <body>
-    <h2>Ingresá tus datos para registarte</h2>
+    <h2>Ingresá tus datos para registrarte</h2>
         
         <div class="container">
             <form action="/users/register" method="POST" enctype="multipart/form-data" class="registration-form" id="formulario">
